Removed duplicate code. Fixed some sections that were not responsive

--- a/landing-pg-styles.css
+++ b/landing-pg-styles.css
@@ -44,14 +44,13 @@ body {
 }
 
 #rectangle-4 {
-	height: 100%;
+	width: 100%;
+	height: 700px;
   border: 1px solid #979797;
   background: url('assets/images/code-2558220.jpg');
   background-position: center;
   background-size: cover;
 	text-align: center;
-	max-width: 100%;
-	background-size: 100% 100%;
 }
 
 .register-today-to-le {
@@ -82,24 +81,21 @@ a,
 
 .rectangle-4-copy {
 	position: relative;
-	height: 90px;
-	width:100%;
+	width: 100%;
+	padding-top: 45px;
+	padding-bottom: 45px;
 	background-color: #1A1A1A;
 	box-shadow: 0 9px 14px 0 rgba(0,0,0,0.2);
+	text-align: center;
 }
 
 .in-partnership-with {
-	position: absolute;
-	height: 29px;
-	max-width: 100%;
-	left: 50%;
 	color: #FFFFFF;
 	font-family: "Roboto Mono", monospace;
 	font-size: 22px;
-	line-height: 29px;
-	padding-top: 20px;
+	margin-right: 3%;
+	margin-left: 3%;
 }
-
 
 .happy-worker-pexels-photo-9416 {
 	position: relative;
